--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 }
 #appContainer {
   height: 100vh;
+  margin: 0 auto;
   max-width: 640px;
   justify-content: space-between;
   position: relative !important;
