--- a/src/style.css
+++ b/src/style.css
@@ -3,18 +3,25 @@
   font-family: 'Source Sans 3', sans-serif !important;
   /* border: 1px solid #aaaaaa; */
 }
+::-webkit-scrollbar {
+  width: 0px;
+}
 :root {
   --primary-hover: #0e78e1;
   --primary: #006ad5;
   --primary-active: #045db7;
-  --gray: #aaaaaa5d;
+  --primary-a: #006ad58c;
+  --gray: #9ca2a74c;
 }
 #appContainer {
   height: 100vh;
   margin: 0 auto;
   max-width: 640px;
+  align-items: flex-start;
   justify-content: space-between;
   position: relative !important;
+  padding-bottom: 56px;
+  gap: 0 !important;
 }
 .carouselNav {
   border-radius: 100%;
@@ -35,8 +42,74 @@
 }
 .input {
   height: 50px !important;
+  border: 1px solid var(--gray) !important;
+  border-radius: 8px !important;
 }
 .input:focus-visible {
-  border: 2px solid var(--primary);
+  border: 2px solid var(--primary) !important;
   box-shadow: none !important;
+}
+
+.kategori {
+  border-radius: 8px;
+  padding: 8px 16px;
+  border: 1px solid var(--gray);
+}
+.selectedKategori {
+  background: var(--primary);
+  color: white;
+}
+.listDokter {
+  border-radius: 8px;
+  padding: 16px;
+  border: 1px solid var(--gray);
+}
+.nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  justify-content: center;
+  gap: 0 !important;
+  box-shadow: 0 0 5px var(--gray);
+  z-index: 99;
+  background: white;
+}
+.selectedNav {
+  background: var(--primary);
+  border-radius: 5px;
+  color: white !important;
+  padding: 4px;
+}
+.bs {
+  border-radius: 8px;
+  border: 1px solid var(--gray);
+}
+.modalContent {
+  position: relative;
+}
+.selectedJadwalPraktek {
+  background: var(--primary);
+  color: white !important;
+}
+.circleCheckbox {
+  border-radius: 100%;
+  border: 2px solid var(--gray);
+  width: 24px;
+  height: 24px;
+}
+
+.dropDownItem:hover {
+  background: var(--primary);
+  color: white !important;
+}
+.tambahnrm {
+  width: 100% !important;
+  border-radius: 0 !important;
+  bottom: 0 !important;
+  position: absolute !important;
+  margin: 0 !important;
+}
+.mainBtn {
+  height: 50px !important;
 }
