--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box !important;
+  /* box-sizing: border-box !important; */
   font-family: 'Source Sans 3', sans-serif !important;
   -webkit-tap-highlight-color: transparent;
   /* border: 1px solid #aaaaaa; */
